# algoritmos_geneticos

./: README.md  pyproject.toml
src/: __init__.py  binary.py
