[tool.poetry]
name = "estudos_ga"
version = "0.1.0"
description = ""
authors = ["irissonnlima <irisson2203@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.23.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
blue = "^0.9.1"
ipykernel = "^6.15.1"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
